--- a/public/css/prep.css
+++ b/public/css/prep.css
@@ -7,6 +7,12 @@ body {
 	text-align: center;
 }
 
+/*TODO: Kipp flip when they sign contract */
+
+.kipp {
+	display: none;
+}
+
 .lemma-difference {
 	padding-top: 40px;
 	padding-bottom: 40px;
@@ -118,7 +124,7 @@ body {
 	-moz-transition: all .5s ease;
 	-o-transition: all .5s ease;
 	background-position: 100% 0;
-	background-size: 200% 200%;
+	background-size: 180% 200%;
 }
 
 .button-4:hover {
@@ -248,10 +254,10 @@ body {
 }
 
 .partner-image {
-	height: 200px;
 	width: 200px;
 	padding-left: 30px;
 	padding-right: 30px;
+	padding-top: 30px; 
 }
 
 .heading-17 {
@@ -560,13 +566,41 @@ body {
 	letter-spacing: 0px;
 	padding-bottom: 40px;
 }
+
 .partner-wrap {
 	display: flex;
 	flex-direction: row;
 	flex-wrap: wrap;
-	align-content: space-between;
+	align-content: space-around;
+	align-items: center;
 	margin-top: 30px;
+	margin-bottom: 30px;
 	margin-left: 30px;
+}
+
+.pricing-button {
+	display: inline-block;
+	margin: 20px 20px;
+	margin-top: 30px;
+	padding: 15px 80px;
+	float: none;
+	border-radius: 12px;
+	color: #fff;
+	font-size: 20px;
+	font-weight: 300;
+	/* TODO: Color of this button. Make modular and run tests*/
+	background-image: linear-gradient(60deg, #09b9e4 0%, #0048bb 100%);
+	background-image: -webkit-linear-gradient(60deg, #09b9e4 0%, #0048bb 100%);
+	background-image: -moz-linear-gradient(60deg, #09b9e4 0%, #0048bb 100%);
+	background-image:-o-linear-gradient(60deg, #09b9e4 0%, #0048bb 100%);
+	box-shadow: 0 1px 3px 0 rgba(0, 0, 0, .6);
+	transition: all .5s ease;
+	background-position: 100% 100%;
+	background-size: 180% 200%;
+}
+
+.pricing-button:hover {
+	background-position: 0 0;
 }
 
 @media (max-width: 991px) {
