--- a/public/css/pricing.css
+++ b/public/css/pricing.css
@@ -60,11 +60,6 @@
   text-align: center;
 }
 
-.pricing-header-text-wrap {
-  padding-top: 10px;
-  padding-bottom: 10px;
-}
-
 .pricing-header-button-wrap {
   display: -webkit-box;
   display: -webkit-flex;
@@ -103,6 +98,7 @@
   padding: 10px 20px;
   border-radius: 10px;
   font-size: 20px;
+  font-weight: 300;
   color: white; 
   text-decoration: none;
   background-position: 100% 100%;
@@ -317,83 +313,64 @@
 }
 
 @media (max-width: 768px) {
-  .pricing-wrap {
-    display: none;
-    margin-top: 20px;
-    margin-left: 0px; 
-    margin-right; 0px; 
-  }
-  .pricing-product {
-    width: 160px;
-  }
-  .pricing-header-text-wrap {
-    padding-right: 20px;
-    padding-left: 20px;
+  .pricing-teacher-call {
+    font-size: 16px; 
   }
   .pricing-header-button-wrap {
-    padding: 10px 20px;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -webkit-flex-direction: column;
-    -ms-flex-direction: column;
-    flex-direction: column;
-  }
-  .pricing-head {
-    font-size: 30px;
-  }
-  .pricing-hero-call {
-    font-size: 16px;
+    flex-direction: column; 
+    align-items: center; 
   }
   .pricing-header-button {
-    font-size: 20px;
+    font-size: 19px;
+    width: 75%;
+    margin-top: 30px; 
   }
   .pricing-teacher-call {
-    margin-bottom: 10px;
-    font-size: 14px;
+    font-size: 19px; 
+  }
+  .pricing-wrap {
+    flex-direction: column; 
+    padding-top: 0px; 
+  }
+  .pricing-product-desc-wrap {
+    width: 80%; 
+  }
+  .pricing-product {
+    display: flex; 
+    flex-direction: column; 
+    align-items: center;
+    flex-grow: 1; 
+    width: auto; 
+    padding: 0px;
+  }
+  .pricing-product-m {
+    display:flex; 
+    flex-direction: column; 
+    align-items: center; 
+    flex-grow: 1; 
+    padding: 0px; 
+    width: auto; 
+  }
+  .pricing-button {
+    width: 100%;
   }
   .pricing-productname {
-    font-size: 24px;
+    border-top: 200px;
   }
-  .pricing-product-desc {
-    font-size: 14px;
+  .pricing-features {
+    width: 80%; 
   }
-  .pricing-price {
-    font-size: 46px;
-  }
-  .pricing-price-wrap {
-    padding-top: 20px;
-    padding-bottom: 20px;
-  }
-  .pricing-wrap-mob {
-    display: inline-block;
-    margin-top: 30px;
-    margin-bottom: 30px;
-    width: 100%;
-    margin-left: 10px;
-    margin-right: 10px;
+  .pricing-features-greyed{
+    width: 80%;
   }
 }
 
 @media (max-width: 479px) {
-  .pricing-header-button-wrap {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -webkit-flex-direction: column;
-    -ms-flex-direction: column;
-    flex-direction: column;
-  }
   .pricing-head {
-    font-size: 30px;
+    font-size: 28px; 
   }
-  .pricing-hero-call {
-    font-size: 18px;
-    line-height: 22px;
-  }
-  .pricing-header-button {
-    margin-right: -18px;
-    margin-left: -18px;
-    padding-top: 8px;
-    padding-bottom: 8px;
+  .pricing-teacher-call {
+    line-height: 150%;  
   }
 }
 
