--- a/public/css/partners.css
+++ b/public/css/partners.css
@@ -1,8 +1,8 @@
 /* TODO: reveal KIPP when they give contract */
 
-.kipp {
+/*.kipp {
   display: none;
-}
+}*/
 
 .navbar {
   background-color: #fff
