--- a/public/css/partners.css
+++ b/public/css/partners.css
@@ -1,9 +1,3 @@
-/* TODO: reveal KIPP when they give contract */
-
-.kipp {
-  display: none;
-}
-
 .navbar {
   background-color: #fff
 }
@@ -222,6 +216,11 @@
   background-size: cover;
 }
 
+.byth-swap {
+  background-image: url('/img/byth-greyscale.svg'); 
+  background-position: 0px 0px;
+  background-size: cover;
+}
 
 .part-hover {
   opacity: 0;
@@ -231,7 +230,7 @@
 }
 
 .part-hover:hover {
-  border-radius: 12px;
+  border-radius: 10px;
   background-image: -webkit-linear-gradient(270deg, hsla(60, 7%, 77%, .2), hsla(60, 7%, 77%, .2));
   background-image: linear-gradient(180deg, hsla(60, 7%, 77%, .2), hsla(60, 7%, 77%, .2));
   opacity: 1;
@@ -406,8 +405,8 @@
   -ms-flex-align: center;
   align-items: center;
   border-radius: 20px;
-  background-image: -webkit-linear-gradient(270deg, hsla(0, 0%, 100%, .95), hsla(0, 0%, 100%, .95));
-  background-image: linear-gradient(180deg, hsla(0, 0%, 100%, .8), hsla(0, 0%, 100%, .95));
+  background-image: -webkit-linear-gradient(270deg, hsla(0, 0%, 100%, .98), hsla(0, 0%, 100%, .98));
+  background-image: linear-gradient(180deg, hsla(0, 0%, 100%, .95), hsla(0, 0%, 100%, .98));
   box-shadow: 1px 1px 12px 0 rgba(0, 0, 0, .5);
 }
 
