--- a/public/css/prep.css
+++ b/public/css/prep.css
@@ -1,3 +1,6 @@
+.step {
+	display: none;
+}
 body {
 	font-family: Roboto, Arial, 'Helvetica Neue', Helvetica, sans-serif;
 	font-weight: 400;
@@ -7,11 +10,6 @@ body {
 	text-align: center;
 }
 
-/*TODO: Kipp flip when they sign contract */
-
-.kipp {
-	display: none;
-}
 
 .lemma-difference {
 	padding-top: 40px;
