--- a/public/css/partners.css
+++ b/public/css/partners.css
@@ -1,7 +1,3 @@
-.step {
-  display: none;
-}
-
 .navbar {
   background-color: #fff
 }
@@ -185,6 +181,10 @@
   text-align: center;
 }
 
+.icons-wrap > a > div {
+  width:  100px;
+}
+
 .lgr-swap {
   background-image: url('/img/lgr-greyscale.svg');
   background-position: 0px 0px;
@@ -235,8 +235,6 @@
 .part-hover {
   opacity: 0;
   transition: .5s;
-  height: 100; 
-  width: 100;
 }
 
 .part-hover:hover {
