--- a/public/css/pricing.css
+++ b/public/css/pricing.css
@@ -9,6 +9,7 @@
   display: -ms-flexbox;
   display: flex;
   margin-top: 30px;
+  margin-bottom: 60px;
   margin-right: 90px;
   margin-left: 90px;
   -webkit-justify-content: space-around;
@@ -67,6 +68,7 @@
   display: flex;
   padding-top: 10px;
   padding-bottom: 10px;
+  margin-top:20px;
   -webkit-box-pack: center;
   -webkit-justify-content: center;
   -ms-flex-pack: center;
@@ -74,7 +76,7 @@
 }
 
 .pricing-head {
-  margin-top: 30px;
+  margin-top: 20px;
   margin-bottom: 20px;
   padding-bottom: 0px;
   font-weight: 400;
@@ -226,6 +228,7 @@
   background-position: 99% 100%;
   background-size: 180% 200%;
   transition: all .5s ease;
+  cursor: pointer;
 }
 .pricing-button-wrap {
   height: 80px;
