Lot's of little UX things
Partner logos updated, lots of little language fixes, typos, new UX/card effect for pricing, updated #s and services for sale, and more

--- a/public/css/partners.css
+++ b/public/css/partners.css
@@ -1,6 +1,7 @@
 .navbar {
   background-color: #fff
 }
+
 .nav-menu {
 	margin-top: 2px;
 }
@@ -595,6 +596,10 @@
 	border-radius: 2px;
 	background-color: #fa4e09;
 	color: #fff;
+}
+
+.image-17 {
+	margin-top: 8px;
 }
 
 @media (max-width: 1024px) {
